--- a/App/Case/CalcRev/Views/CaseBilledChargesView.html
+++ b/App/Case/CalcRev/Views/CaseBilledChargesView.html
@@ -101,7 +101,7 @@
                 </td>
             </tr>
 
-            <tr ng-show="responsibility.approvalRequired && !responsibility.approved && hasPermissionForApproval">
+            <tr ng-show="responsibility.approvalRequired && !responsibility.approved">
                 <td colspan="4">
                     <button class="btn btn-primary btn-sm pull-right"
                             ng-click="open()">
