--- a/App/Case/Parts/Views/AddPartsToCaseView.html
+++ b/App/Case/Parts/Views/AddPartsToCaseView.html
@@ -1,6 +1,6 @@
 ﻿<div master-page class="container-fluid">
 
-    <div ng-hide="uncommittedDebitPartsExists || loadingParts">
+    <div>
         <fieldset>
 
             <div class="row">
@@ -18,7 +18,7 @@
             <div class="row">
 
                 <div class="col-sm-8 bold">
-                    <h4>{{caseInfo.name}}</h4>
+                    <h4>Aba_Bea_Arthroplasty, Interposition, Carpometacarpal Joint_205539</h4>
                 </div>
 
 
